@@ -1,9 +1,13 @@
 package com.hsbc.assignment;
 
 import com.hsbc.assignment.Employee;
-import java.util.List;
-import java.util.Map;
+import com.hsbc.assignment.FindAverageSalaryApp;
+
+import java.util.*;
+
 import org.junit.jupiter.api.Test;
+
+
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 /**
@@ -14,26 +18,23 @@ public class AppTest
 	@Test
     void testCalculateAverageSalary() {
         // Sample employee data
-        List<Employee> employees = List.of(
-                new Employee("Ashish", "A", "IT", "Pune", "Software Engineer", new Double(10000)),
-                new Employee("Amit", "R", "HR", "Pune", "Recruiter", new Double(12000)),
-                new Employee("Ramesh", "D", "HR", "Pune", "Senior Recruiter", new Double(14000))
-            //    new Employee("San Francisco", "Manager", 110000),
-             //   new Employee("San Francisco", "Developer", 90000)
-        );
-
+        List<Employee> employees = Arrays.asList(
+            new Employee("Ashish", "A", "IT", "Pune", "Software Engineer", new Double(10000)),
+            new Employee("Amit", "R", "HR", "Pune", "Recruiter", new Double(12000)),
+            new Employee("Ramesh", "D", "HR", "Pune", "Senior Recruiter", new Double(14000)),
+            new Employee("Jaya", "S", "IT", "Pune", "Tech Lead", new Double(15000)),
+            new Employee("Smita", "M", "IT", "Bangalore", "Recruiter", new Double(16000)));
         // Expected result
-        Map<String, Double> expected = Map.of(
-                "New York_Manager", 110000.0,
-                "New York_Developer", 80000.0,
-                "San Francisco_Manager", 110000.0,
-                "San Francisco_Developer", 90000.0
-        );
-
+        Map<String, Double> expected = new HashMap <String, Double>(){{
+           put("Pune_Tech Lead", new Double(15000.0));
+           put("Pune_Senior Recruiter", new Double(14000.0));
+           put("Bangalore_Recruiter", new Double(16000.0));
+           put("Pune_Software Engineer", new Double(10000.0));
+           put("Pune_Recruiter", new Double(19000.00));
+        }};
         // Calculate average salary
-        Map<String, Double> averageSalaryMap = AverageSalaryCalculator.calculateAverageSalary(employees);
-
-        // Check if the result matches the expected values
+        Map<String, Double> averageSalaryMap = FindAverageSalaryApp.findAverageSalary(employees);
+      // Check if the result matches the expected values
         assertEquals(expected.size(), averageSalaryMap.size());
         expected.forEach((key, expectedValue) -> {
             assertEquals(expectedValue, averageSalaryMap.get(key));
